<resources>
    <string name="app_name">BusinessCard</string>
    <string name="lb_bizCard">Cartão de Visitas</string>
    <string name="btn_add">Adicionar cartão</string>
    <string name="label_add_buz_card">Adicionar Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_cargo">Cargo</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_salvar">Salvar</string>
    <string name="label_email">E-mail</string>
    <string name="label_cor">Cor de Fundo</string>
    <string name="label_show_success">Cartão salvo com sucesso!</string>
    <string name="label_share">Compartilhar</string>
</resources>